use locally cached images if available.
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@2693 0c594bb0-8543-0410-a25e-d8ec440261db